FIX faulty docker build
Docker build failed due to not being able to use catkin build command, which is fixed by executing the command using bash manually inside the docker build process

--- a/docker/docker/Dockerfile
+++ b/docker/docker/Dockerfile
@@ -22,25 +22,31 @@ RUN mkdir /images
 WORKDIR /catkin_ws/src
 RUN wget -O sharework_screw_detection_ros.zip \
 https://github.com/nilsmandischer/sharework_screw_detection_ros/archive/refs/heads/master.zip && \
-      unzip sharework_screw_detection_ros.zip -d sharework_screw_detection_ros
+      unzip sharework_screw_detection_ros.zip
+RUN mv sharework_screw_detection_ros-master sharework_screw_detection_ros
+RUN rm sharework_screw_detection_ros.zip
 
-RUN mkdir /catkin_ws/src/sharework_screw_detection_ros/modules
 WORKDIR /catkin_ws/src/sharework_screw_detection_ros/modules
 RUN wget -O sharework_screw_detection.zip \
 https://github.com/nilsmandischer/sharework_screw_detection/archive/refs/heads/master.zip && \
-      unzip sharework_screw_detection.zip -d sharework_screw_detection
+      unzip sharework_screw_detection.zip
+RUN rm -r sharework_screw_detection
+RUN mv sharework_screw_detection-master sharework_screw_detection
+RUN rm sharework_screw_detection.zip
 
 WORKDIR /catkin_ws/src/sharework_screw_detection_ros/modules/sharework_screw_detection/screw_detection
 RUN mkdir build && cd build && cmake .. && make
 
 #Build the workspace
 WORKDIR /catkin_ws
-RUN catkin build
+RUN /bin/bash -c '. /opt/ros/noetic/setup.bash; cd /catkin_ws; catkin build'
 
 #Remove unneeded files
 RUN rm -r /home/Downloads
 
 #Set up ROS
 WORKDIR /catkin_ws
+
 RUN echo 'source /opt/ros/$ROS_DISTRO/setup.bash' >> /root/.bashrc
 RUN echo 'source /catkin_ws/devel/setup.bash' >> /root/.bashrc
+
